FunctionCraft/gen/main/grammar/FunctionCraftParser.java
// Generated from C:/Users/heypo/Desktop/Uni/Term 8/COMPILER/Proj/CA1/FunctionCraft/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT_VAL=1, FLOAT=2, LPAR=3, RPAR=4, LBRAK=5, RBRAK=6, COMMA=7, DOT=8, 
		DDOT=9, COLON=10, SEMICOLON=11, PLUS=12, MINUS=13, MULTI=14, DIV=15, INC=16, 
		DEC=17, REMAIN=18, GEQ=19, LEQ=20, GTR=21, LES=22, EQL=23, NEQ=24, AND=25, 
		OR=26, NOT=27, APPEND=28, ASSIGN=29, PASSIGN=30, MASSIGN=31, OASSIGN=32, 
		DASSIGN=33, RASSIGN=34, CASE=35, PATTERN=36, MATCH=37, DEF=38, END=39, 
		RETURN=40, METHOD=41, MAP=42, LEN=43, CHOP=44, CHOMP=45, PUSH=46, PUTS=47, 
		MAIN=48, LBRACE=49, RBRACE=50, LOOP=51, DO=52, FOR=53, IN=54, NEXT=55, 
		BREAK=56, IF=57, ELSE=58, ELSEIF=59, TURE=60, FALSE=61, IDENTIFIER=62, 
		STRING=63, NEWLINE=64, INLINECOMMENT=65, MULLINECOMMENT=66, SPACE=67;
	public static final int
		RULE_program = 0, RULE_blabla = 1, RULE_function = 2, RULE_lambda = 3, 
		RULE_list = 4, RULE_pattern = 5, RULE_main = 6, RULE_params = 7, RULE_optional = 8, 
		RULE_exp = 9, RULE_logic_exp = 10, RULE_compare = 11, RULE_function_call = 12, 
		RULE_condi = 13, RULE_const = 14, RULE_func_ptr = 15, RULE_comp = 16, 
		RULE_body_func = 17, RULE_ret_exp = 18, RULE_assign = 19, RULE_assignment = 20, 
		RULE_append = 21, RULE_ifcondi = 22, RULE_loop = 23, RULE_loopdo = 24, 
		RULE_bodyloop = 25, RULE_forin = 26, RULE_range = 27, RULE_built_in = 28, 
		RULE_for_condi = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "blabla", "function", "lambda", "list", "pattern", "main", 
			"params", "optional", "exp", "logic_exp", "compare", "function_call", 
			"condi", "const", "func_ptr", "comp", "body_func", "ret_exp", "assign", 
			"assignment", "append", "ifcondi", "loop", "loopdo", "bodyloop", "forin", 
			"range", "built_in", "for_condi"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'['", "']'", "','", "'.'", "'..'", "':'", 
			"';'", "'+'", "'-'", "'*'", "'/'", "'++'", "'--'", "'%'", "'>='", "'<='", 
			"'>'", "'<'", "'=='", "'!='", "'&&'", "'||'", "'!'", "'<<'", "'='", "'+='", 
			"'-='", "'*='", "'/='", "'%='", "'    |'", "'pattern'", "'match'", "'def'", 
			"'end'", "'return'", "'method'", "'->'", "'len'", "'chop'", "'chomp'", 
			"'push'", "'puts'", "'main'", "'{'", "'}'", "'loop'", "'do'", "'for'", 
			"'in'", "'next'", "'break'", "'if'", "'else'", "'elseif'", "'true'", 
			"'false'", null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT_VAL", "FLOAT", "LPAR", "RPAR", "LBRAK", "RBRAK", "COMMA", 
			"DOT", "DDOT", "COLON", "SEMICOLON", "PLUS", "MINUS", "MULTI", "DIV", 
			"INC", "DEC", "REMAIN", "GEQ", "LEQ", "GTR", "LES", "EQL", "NEQ", "AND", 
			"OR", "NOT", "APPEND", "ASSIGN", "PASSIGN", "MASSIGN", "OASSIGN", "DASSIGN", 
			"RASSIGN", "CASE", "PATTERN", "MATCH", "DEF", "END", "RETURN", "METHOD", 
			"MAP", "LEN", "CHOP", "CHOMP", "PUSH", "PUTS", "MAIN", "LBRACE", "RBRACE", 
			"LOOP", "DO", "FOR", "IN", "NEXT", "BREAK", "IF", "ELSE", "ELSEIF", "TURE", 
			"FALSE", "IDENTIFIER", "STRING", "NEWLINE", "INLINECOMMENT", "MULLINECOMMENT", 
			"SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public BlablaContext blabla() {
			return getRuleContext(BlablaContext.class,0);
		}
		public List<TerminalNode> INLINECOMMENT() { return getTokens(FunctionCraftParser.INLINECOMMENT); }
		public TerminalNode INLINECOMMENT(int i) {
			return getToken(FunctionCraftParser.INLINECOMMENT, i);
		}
		public List<TerminalNode> MULLINECOMMENT() { return getTokens(FunctionCraftParser.MULLINECOMMENT); }
		public TerminalNode MULLINECOMMENT(int i) {
			return getToken(FunctionCraftParser.MULLINECOMMENT, i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FunctionCraftParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FunctionCraftParser.NEWLINE, i);
		}
		public List<PatternContext> pattern() {
			return getRuleContexts(PatternContext.class);
		}
		public PatternContext pattern(int i) {
			return getRuleContext(PatternContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(65);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case INLINECOMMENT:
						{
						setState(60);
						match(INLINECOMMENT);
						}
						break;
					case MULLINECOMMENT:
						{
						setState(61);
						match(MULLINECOMMENT);
						}
						break;
					case DEF:
						{
						setState(62);
						function();
						}
						break;
					case NEWLINE:
						{
						setState(63);
						match(NEWLINE);
						}
						break;
					case PATTERN:
						{
						setState(64);
						pattern();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(70);
			main();
			setState(71);
			blabla();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlablaContext extends ParserRuleContext {
		public List<TerminalNode> MULLINECOMMENT() { return getTokens(FunctionCraftParser.MULLINECOMMENT); }
		public TerminalNode MULLINECOMMENT(int i) {
			return getToken(FunctionCraftParser.MULLINECOMMENT, i);
		}
		public List<TerminalNode> INLINECOMMENT() { return getTokens(FunctionCraftParser.INLINECOMMENT); }
		public TerminalNode INLINECOMMENT(int i) {
			return getToken(FunctionCraftParser.INLINECOMMENT, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FunctionCraftParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FunctionCraftParser.NEWLINE, i);
		}
		public BlablaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blabla; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterBlabla(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitBlabla(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitBlabla(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlablaContext blabla() throws RecognitionException {
		BlablaContext _localctx = new BlablaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_blabla);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0)) {
				{
				{
				setState(73);
				_la = _input.LA(1);
				if ( !(((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public Token name;
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public Body_funcContext body_func() {
			return getRuleContext(Body_funcContext.class,0);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FunctionCraftParser.IDENTIFIER, 0); }
		public OptionalContext optional() {
			return getRuleContext(OptionalContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(FunctionCraftParser.COMMA, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(DEF);
			setState(80);
			((FunctionContext)_localctx).name = match(IDENTIFIER);
			System.out.println("FuncDec: " + (((FunctionContext)_localctx).name!=null?((FunctionContext)_localctx).name.getText():null));
			setState(82);
			match(LPAR);
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRAK:
				{
				setState(83);
				optional();
				}
				break;
			case IDENTIFIER:
				{
				setState(84);
				params();
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(85);
					match(COMMA);
					setState(86);
					optional();
					}
				}

				}
				break;
			case RPAR:
				break;
			default:
				break;
			}
			setState(91);
			match(RPAR);
			setState(92);
			body_func();
			setState(93);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LambdaContext extends ParserRuleContext {
		public TerminalNode MAP() { return getToken(FunctionCraftParser.MAP, 0); }
		public List<TerminalNode> LPAR() { return getTokens(FunctionCraftParser.LPAR); }
		public TerminalNode LPAR(int i) {
			return getToken(FunctionCraftParser.LPAR, i);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<TerminalNode> RPAR() { return getTokens(FunctionCraftParser.RPAR); }
		public TerminalNode RPAR(int i) {
			return getToken(FunctionCraftParser.RPAR, i);
		}
		public TerminalNode LBRACE() { return getToken(FunctionCraftParser.LBRACE, 0); }
		public TerminalNode RETURN() { return getToken(FunctionCraftParser.RETURN, 0); }
		public Ret_expContext ret_exp() {
			return getRuleContext(Ret_expContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(FunctionCraftParser.SEMICOLON, 0); }
		public TerminalNode RBRACE() { return getToken(FunctionCraftParser.RBRACE, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FunctionCraftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FunctionCraftParser.COMMA, i);
		}
		public LambdaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambda; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterLambda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitLambda(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitLambda(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LambdaContext lambda() throws RecognitionException {
		LambdaContext _localctx = new LambdaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lambda);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(MAP);
			System.out.println("Structure: LAMBDA");
			setState(97);
			match(LPAR);
			setState(98);
			params();
			setState(99);
			match(RPAR);
			setState(100);
			match(LBRACE);
			setState(101);
			match(RETURN);
			System.out.println("RETURN");
			setState(103);
			ret_exp();
			setState(104);
			match(SEMICOLON);
			setState(105);
			match(RBRACE);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAR) {
				{
				setState(106);
				match(LPAR);
				setState(107);
				exp(0);
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(108);
					match(COMMA);
					setState(109);
					exp(0);
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(115);
				match(RPAR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode LBRAK() { return getToken(FunctionCraftParser.LBRAK, 0); }
		public TerminalNode RBRAK() { return getToken(FunctionCraftParser.RBRAK, 0); }
		public List<ListContext> list() {
			return getRuleContexts(ListContext.class);
		}
		public ListContext list(int i) {
			return getRuleContext(ListContext.class,i);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FunctionCraftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FunctionCraftParser.COMMA, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(LBRAK);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -1152648825723150294L) != 0)) {
				{
				setState(122);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(120);
					list();
					}
					break;
				case 2:
					{
					setState(121);
					exp(0);
					}
					break;
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(124);
					match(COMMA);
					setState(127);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(125);
						list();
						}
						break;
					case 2:
						{
						setState(126);
						exp(0);
						}
						break;
					}
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(136);
			match(RBRAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PatternContext extends ParserRuleContext {
		public Token name;
		public TerminalNode PATTERN() { return getToken(FunctionCraftParser.PATTERN, 0); }
		public List<TerminalNode> LPAR() { return getTokens(FunctionCraftParser.LPAR); }
		public TerminalNode LPAR(int i) {
			return getToken(FunctionCraftParser.LPAR, i);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<TerminalNode> RPAR() { return getTokens(FunctionCraftParser.RPAR); }
		public TerminalNode RPAR(int i) {
			return getToken(FunctionCraftParser.RPAR, i);
		}
		public TerminalNode SEMICOLON() { return getToken(FunctionCraftParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FunctionCraftParser.IDENTIFIER, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(FunctionCraftParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FunctionCraftParser.NEWLINE, i);
		}
		public List<TerminalNode> CASE() { return getTokens(FunctionCraftParser.CASE); }
		public TerminalNode CASE(int i) {
			return getToken(FunctionCraftParser.CASE, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(FunctionCraftParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(FunctionCraftParser.ASSIGN, i);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<CondiContext> condi() {
			return getRuleContexts(CondiContext.class);
		}
		public CondiContext condi(int i) {
			return getRuleContext(CondiContext.class,i);
		}
		public List<Logic_expContext> logic_exp() {
			return getRuleContexts(Logic_expContext.class);
		}
		public Logic_expContext logic_exp(int i) {
			return getRuleContext(Logic_expContext.class,i);
		}
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pattern);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(PATTERN);
			setState(139);
			((PatternContext)_localctx).name = match(IDENTIFIER);
			System.out.println("PatternDec: " + (((PatternContext)_localctx).name!=null?((PatternContext)_localctx).name.getText():null));
			setState(141);
			match(LPAR);
			setState(142);
			params();
			setState(143);
			match(RPAR);
			setState(155); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(144);
					match(NEWLINE);
					setState(145);
					match(CASE);
					setState(146);
					match(LPAR);
					setState(149);
					_errHandler.sync(this);
